# cargo_update_version

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.chglog/: config.yml
.github/: release.yaml
.github/workflows/: binary.yml  test.yaml
src/: cargo.rs  cli.rs  error.rs  git.rs  git_tag.rs  lib.rs  main.rs  manifest.rs  packages.rs  process.rs  task.rs  version.rs
src/cli/: action.rs  cli.rs  git_ops.rs  manifest.rs  mod.rs  suppress.rs  workspace.rs
src/git/: branch.rs  git.rs  git_file.rs  mod.rs
src/manifest/: error.rs  mod.rs  packages.rs  toml_file.rs  version_location.rs
src/tasks/: mod.rs  predict_tasks.rs  task.rs  tasks.rs
src/version/: identifiers.rs  mod.rs  pre_release.rs  version_extentions.rs
test_cargo/: Cargo.toml
tests/: integration_test.rs
tests/fixtures/mixed_ws/: Cargo.toml
tests/fixtures/mixed_ws/a/: Cargo.toml
tests/fixtures/mixed_ws/c/: Cargo.toml
tests/fixtures/simple/: Cargo.toml
tests/fixtures/ws_version/: Cargo.toml
tests/fixtures/ws_version/c/: Cargo.toml
tests/fixtures/ws_version_mixed/: Cargo.toml
tests/fixtures/ws_version_mixed/a/: Cargo.toml
tests/fixtures/ws_version_nested/: Cargo.toml
tests/fixtures/ws_version_nested/a/: Cargo.toml
tests/fixtures/ws_version_nested/a/c/: Cargo.toml
