[package]
name = "cargo-uv"
authors = ["Zack Hankin <admin@hankin.io>"]
version = "0.5.1"
edition = "2024"
readme = "./README.md"
description = "A simple Cargo tool for updating the version in your project."
license = "MIT"
repository = "https://github.com/Ozy-Viking/cargo_update_version"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
cargo_metadata = { version = "0.19.0" }
clap = { version = "4.5.40", features = ["derive", "cargo", "string"] }
clap-verbosity-flag = { version = "3.0.3", features = [
    "tracing",
], default-features = false }
clap-cargo = { version = "0.15.2", features = ["cargo_metadata"] }
colorchoice-clap = "1.0.7"
rusty_viking = "0.3.1"
toml_edit = "0.22.27"

miette = { version = "7.6.0", features = ["fancy"] }
semver = "1.0.26"
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { version = "2" }


[[bin]]
name = "cargo-uv"
path = "src/bin/cargo_uv.rs"
